[gd_scene load_steps=3 format=3 uid="uid://dds5duujyul3g"]

[ext_resource type="Script" uid="uid://b4ljgexusilh4" path="res://UI/equipment_menu_components/equipment_menu.gd" id="1_gsmri"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ifl0f"]
bg_color = Color(0.439216, 0.00784314, 0.113725, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.698671, 0, 0.250641, 1)

[node name="equipment_menu" type="VBoxContainer"]
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_gsmri")

[node name="Layout" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="Layout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
current_tab = 0

[node name="Weapon" type="ItemList" parent="Layout/TabContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_tab_index = 0

[node name="Armor" type="ItemList" parent="Layout/TabContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_tab_index = 1

[node name="Layout" type="VBoxContainer" parent="Layout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Exit" type="Button" parent="Layout/Layout"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ifl0f")
text = "  X  "

[node name="Layout" type="HBoxContainer" parent="Layout/Layout"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="Display" type="VBoxContainer" parent="Layout/Layout/Layout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AgentSprite" type="TextureRect" parent="Layout/Layout/Layout/Display"]
layout_mode = 2

[node name="AgentName" type="Label" parent="Layout/Layout/Layout/Display"]
layout_mode = 2

[node name="WeaponName" type="Label" parent="Layout/Layout/Layout/Display"]
layout_mode = 2

[node name="ArmorName" type="Label" parent="Layout/Layout/Layout/Display"]
layout_mode = 2

[node name="Agents" type="ItemList" parent="Layout/Layout/Layout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="button_down" from="Layout/Layout/Exit" to="." method="_on_exit_button_down"]
